--- a/_data/i18n/fr/projects/c_xdefiant.yml
+++ b/_data/i18n/fr/projects/c_xdefiant.yml
@@ -1,8 +1,7 @@
 title: XDefiant
-description: Tom Clancy's XDefiant is a <b>free-to-play</b>, <b>fast-paced arena shooter</b> that combines intense gunplay
-          with personalized loadouts and specialized factions,
-          as teams of gunfighters – called Defiants – battle for domination.
-short-description: Free-to-play fast-paced arena shooter made by Ubisoft. 
-very-short-description: Free-to-play fast-paced arena shooter made by Ubisoft. 
-genre: Free-to-play arena FPS
-download-button: Website
+description: XDefiant est un <b>jeu de tir gratuit en arène en ligne et à la première personne</b>,
+             dans lequel vous vous battez dans des affrontements au rythme effréné.
+short-description: Jeu de tir en arène effréné par Ubisoft. 
+very-short-description: Jeu de tir en arène effréné par Ubisoft. 
+genre: FPS free-to-play
+download-button: Site web
