--- a/_data/i18n/fr/projects/a_fired_up.yml
+++ b/_data/i18n/fr/projects/a_fired_up.yml
@@ -5,3 +5,10 @@ very-short-description: Jeu multijoueur local à 4
 genre: Multijoueur local
 tools: Unity, Probuilder, Notion, Google Slides
 download-button: Télécharger sur itch.io
+detailed-blocks:
+  one-page: One Page
+  writing-documents: Writing documents
+  research: Research
+  metrics: Metrics
+  balancing: Balancing
+  team-work: Team work
