--- a/_data/i18n/fr/projects/a_fired_up.yml
+++ b/_data/i18n/fr/projects/a_fired_up.yml
@@ -7,8 +7,8 @@ tools: Unity, Probuilder, Notion, Google Slides
 download-button: Télécharger sur itch.io
 detailed-blocks:
   one-page: One Page
-  writing-documents: Writing documents
-  research: Research
-  metrics: Metrics
-  balancing: Balancing
-  team-work: Team work
+  writing-documents: Écrire des documents
+  research: Recherche
+  metrics: Métriques
+  balancing: Équilibrage
+  team-work: Travail d'équipe
